--- a/week01-ownership-store/Cargo.toml
+++ b/week01-ownership-store/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.149"
 thiserror = "2.0.18"
+
+[dev-dependencies]
+tempfile = "3.10.1"
