--- a/week01-ownership-store/Cargo.toml
+++ b/week01-ownership-store/Cargo.toml
@@ -8,7 +8,7 @@ axum = "0.8.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.149"
 thiserror = "2.0.18"
-tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs"] }
 tower = "0.5.3"
 tower-http = "0.6.8"
 textkit = { path = "../week01-text-stats/textkit" }
